[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pdftool"
version = "0.1.0"
description = "PDF toolkit CLI — merge, split, compress, OCR, rotate, watermark, convert, info, and more"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = [
    "pypdf>=4.0",
    "pdfplumber>=0.10",
    "ocrmypdf>=15.0",
    "img2pdf>=0.5",
    "pypdfium2>=4.0",
    "Pillow>=10.0",
    "reportlab>=4.0",
]

[project.scripts]
pdftool = "pdftool:main"

[tool.setuptools]
py-modules = ["pdftool"]
